# Pneumonia-Detection-

./: README.md  app.py  pyproject.toml  utils.py  xraynet-test-87.ipynb
