[tool.poetry]
name = "xraynet-pneumonia-detection"
version = "0.1.0"
description = "Deep learning-based project for detecting pneumonia from chest X-ray images using CNNs"
authors = ["Mohamed Hossam <mohamedhossam.bacc@gmail.com>"]

[tool.poetry.dependencies]
tensorflow = ">=2.12.0"
python = ">=3.6,<=3.12"

[[tool.poetry.source]]
name = 'default'
url = 'https://pypi.python.org/simple'
secondary = false
